Corrected typing alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -227,21 +227,18 @@ img{
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .15em; /* Adjust as needed */
-  animation: 
-    typing 3.5s steps(50, end),
+  animation:
     blink-caret .65s step-end infinite;
-}
-
-/* The typing effect */
-@keyframes typing {
-  from { width: 0 }
-  to { width: 50% }
 }
 
 /* The typewriter cursor effect */
 @keyframes blink-caret {
   from, to { border-color: transparent }
   50% { border-color: orange }
+}
+
+.wrap {
+  border-right: 0.08em solid #fff;
 }
 
 /*BUTTONS*/
